fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ img{
     grid-column: 2/8;
     font-size: 2.5rem;
     letter-spacing: -0.125px;
-    margin-bottom: 2rem;
+    margin-bottom: 0.875em;
 }
 
 .work_link{
@@ -505,7 +505,7 @@ img{
         grid-column: 2/5;
         font-size: 1.375rem;
         letter-spacing: 0px;
-        margin-bottom: 1rem;
+        margin-bottom: 0.625em;
     }
 
     .work_link{
@@ -546,7 +546,7 @@ img{
         grid-column: 2/5;
         font-size: 1.375rem;
         letter-spacing: 0px;
-        margin-bottom: 0.5em;
+        margin-bottom: 0.625em;
     }
 
     .info_about{
